<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SettingsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@color/blue"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/language_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/language"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languages_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/language_txt"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxBackgroundColor="@color/bottom_nav_bg_color"
        android:drawSelectorOnTop="true"
        >

        <AutoCompleteTextView
            android:id="@+id/autoComplete_lang_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:inputType="none"
            android:textColor="@color/blue"
            android:text="@string/english"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/modes_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/languages_til"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/modes"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/modes_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/modes_txt"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxBackgroundColor="@color/bottom_nav_bg_color"
        android:drawSelectorOnTop="true"
        >

        <AutoCompleteTextView
            android:id="@+id/autoComplete_mode_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:inputType="none"
            android:textColor="@color/blue"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>