<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/task_details_activity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        android:background="@drawable/white_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="0.8">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/edit_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/edit_task"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_task"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:hint="@string/title"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title_til"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="5"
                        android:maxLines="5"
                        android:hint="@string/description"
                        android:padding="20dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/select_date_til"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/select_time_til"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_til"
                    >
                    <TextView
                        android:id="@+id/select_date_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date"
                        android:padding="10dp"
                        app:layout_constraintTop_toBottomOf="@id/description_til"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/select_time_til"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/select_date_til"
                    app:layout_constraintTop_toBottomOf="@id/description_til"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    >
                    <TextView
                        android:id="@+id/select_time_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_time"
                        android:padding="10dp"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/select_date_til"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue"
                    android:text="@string/save"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>