<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/activity_bg"
    android:padding="10dp">

    <com.zerobranch.layout.SwipeLayout
        android:id="@+id/swipe_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:autoMovingSensitivity="200"
        app:swipeDirection="right"
        app:draggedItem="@id/drag_item"
        app:leftItem="@id/imageForDelete">

        <ImageView
            android:id="@+id/imageForDelete"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_delete_24"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:gravity="center"
            android:background="@drawable/backgroud_delete"
            android:contentDescription="@string/todo" />


        <androidx.cardview.widget.CardView
            android:id="@+id/drag_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:background="@color/bottom_nav_bg_color"
            android:backgroundTint="@color/bottom_nav_bg_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">



                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dragging_bar"
                    android:layout_width="7dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="20dp"
                    android:src="@drawable/dragging_bar"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/dragging_bar"
                    app:layout_constraintStart_toEndOf="@id/dragging_bar"
                    app:layout_constraintEnd_toStartOf="@id/btn_task_isDone"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:lines="1"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto"
                    android:ellipsize="end"
                    tools:text=" i play Baskect ball"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/edit_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btn_task_isDone"
                    app:layout_constraintStart_toStartOf="@id/btn_task_isDone"
                    app:layout_constraintEnd_toEndOf="@id/btn_task_isDone"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit_todo"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/dragging_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dragging_bar"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintEnd_toStartOf="@id/btn_task_isDone"
                    android:drawablePadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:lines="1"
                    android:textColor="@color/colorForTimeItem"
                    android:textSize="12sp"
                    android:gravity="start|center_vertical"
                    android:fontFamily="@font/roboto"
                    android:ellipsize="end"
                    tools:text=" 4/2/2024"
                    android:textStyle="bold"
                    app:drawableTint="?attr/colorOnBackground"
                    />

                <ImageButton
                    android:id="@+id/btn_task_isDone"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/edit_txt"
                    android:background="@drawable/check_mark"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/done_txt"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/edit_txt"
                    android:layout_margin="20dp"
                    android:visibility="invisible"
                    android:text="@string/done"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#48EF0B"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </com.zerobranch.layout.SwipeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>